@startuml
'https://plantuml.com/class-diagram

class WateringUI{
}
class WateringController {
    - readFile (fileName)
    - createWateringPlan (wateringHours, wateringList)
    - verifyThatIsWatering (wateringPlan, year, month, day, hour, minute)
    - generateWateringPlan (wateringPlan)
    - readWateringPlanGeneratedFileAndCheckIfWateringConcluded (fileName)
}

class WateringPlanRepository{
    - getWateringPlanList ()
    - createWateringPlan (wateringHours, wateringList, wateringCalendar)
}

class WateringPlan{
    - List<String> wateringHours
    - WateringPlan (wateringHours, wateringList, wateringCalendar)
}

class Watering{
    - Character agriculturalPartialSector
    - Integer wateringMinutes
    - Watering (agriculturalPartialSector, wateringMinutes, wateringTimeRegularity)
}

class DateInterval{
    - Date startDate
    - Date endDate
    - DateInterval (startDate, endDate)
}

class WateringTimeRegularity {
    - String wateringRegularity
    - WateringTimeRegularity (wateringRegularity)
}

WateringUI -> WateringController
WateringController -> WateringPlanRepository
WateringPlanRepository --> WateringPlan
WateringPlan ----> Watering
WateringPlan ---> DateInterval
Watering --> WateringTimeRegularity
WateringController --.> WateringPlan
WateringController --.> Watering
WateringController --.> DateInterval
WateringController --.> WateringTimeRegularity

@enduml